src/objects/OAuthApp_pbi__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Power Bi Custom Settings</description>
    <fields>
        <fullName>Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_URL__c</fullName>
        <label>Authorization URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseTokenURL__c</fullName>
        <label>BaseTokenURL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_URI__c</fullName>
        <label>Resource URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <description>Holds the grant type value for Power BI</description>
        <label>Grant Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>OAuthApp pbi</label>
</CustomObject>